--- a/src/index.scss
+++ b/src/index.scss
@@ -3,5 +3,10 @@
 body {
   height: 100%;
   margin: 0;
+  background-image:
+    linear-gradient(to top,
+      black, #14248A);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
